--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,13 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
+node_modules/
 dist
 dist-ssr
 *.local
+
+#myfiles
+notes.txt/
 
 # Editor directories and files
 .vscode/*
@@ -22,3 +25,4 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
