--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/core": "^5.10.0",
     "@mantine/dates": "^5.10.0",
     "@mantine/hooks": "^5.10.0",
+    "axios": "^1.2.2",
     "dayjs": "^1.11.7",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
