--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
+    "@mantine/carousel": "^5.10.0",
     "@mantine/core": "^5.10.0",
     "@mantine/dates": "^5.10.0",
     "@mantine/hooks": "^5.10.0",
     "axios": "^1.2.2",
     "dayjs": "^1.11.7",
+    "embla-carousel-react": "^7.0.5",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
     "react": "^18.2.0",
