--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mantine/dates": "^5.10.0",
     "@mantine/dropzone": "^5.10.1",
     "@mantine/hooks": "^5.10.1",
+    "@mantine/notifications": "^5.10.1",
     "@mantine/tiptap": "^5.10.1",
     "@reduxjs/toolkit": "^1.9.1",
     "@tabler/icons": "^1.119.0",
