feat: complete blog edit and blog detail page

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mantine/dropzone": "^5.10.1",
     "@mantine/hooks": "^5.10.1",
     "@mantine/notifications": "^5.10.1",
+    "@mantine/rte": "^5.10.1",
     "@mantine/tiptap": "^5.10.1",
     "@reduxjs/toolkit": "^1.9.1",
     "@tabler/icons": "^1.119.0",
